--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -26,6 +26,8 @@
                     |                                                                         |
                     |                             7) Animations                               |
                     |                                                                         |
+                    |                             8) Game End Screen                          |
+                    |                                                                         |
                     |                             8) Helpers                                  |
                     |                                                                         |
                     |                             7) Media Queries                            |
@@ -36,7 +38,7 @@
                     |                                                                         |
                     |_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ __ _ _ _ _ _ _ _ _ _ |
 
-                                                                                                                                                                                                                                                                              /*
+   margin-inline , background-clip background-text-clip                                                                                                                                                                                                                                                                         /*
 ================================================================================================================================================================================================================================================================================
                                  
                                                     General       
@@ -55,6 +57,7 @@
                                         7) CSS-Background Cliptext einsetzen für "ausdem nichts kommen Effekt"
                                         8) ::after / ::before für Punkt -> Strich Animation
                                         9) Font Styling
+                                        10) Game end screen an mobile anpassen (animation muss nach unten ablaufen)
                   
                                                                                                                                                                                                              */
 
@@ -109,7 +112,7 @@ header{
 }
 
 .Class_LeftSidebarWrapper{
-    min-width: 30vw;
+    min-width: 30%;
     margin-bottom: 30vh;
     border-top:  solid 1px var(--prime-border);
     border-bottom:  solid 1px var(--prime-border);
@@ -129,7 +132,7 @@ header{
 }
 
 .Class_RightSidebarWrapper{
-    min-width: 30vw;
+    min-width: 30%;
     margin-bottom: 30vh;
     border-top:  solid 1px var(--prime-border);
     border-bottom:  solid 1px var(--prime-border);
@@ -139,44 +142,7 @@ footer{
     margin-top: 1rem;
 }
 
-
-/* Move Gameboard to the right Animation */
-.Class_Gameboard_End{
-    position: absolute;
-    animation: Gameboard_End_Animation 4s ease-in ;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-
-}
-
-@keyframes Gameboard_End_Animation {
-    from{
-        bottom: 16.5vh;
-        right: 30vw;
-    }
-    to {
-        bottom: 0;
-        right: 0;
-        max-height: 10vh;
-        max-width: 8vw;
-    }
-}
-
-
-.Class_Game_End{
-    position: absolute;
-    left: 0;
-    top: 0;
-    min-width: 100%;
-    min-height: 100%;
-}
-
-.Class_End_Button{
-    min-width: 5rem;
-    min-height: 5rem;
-}
-
-                                                                                                                                                                                                                                                                              /*
+                                                                                                                                                                                                                                                               /*
 ================================================================================================================================================================================================================================================================================
                                  
                                                         Gameboard     
@@ -273,6 +239,7 @@ footer{
     height: 2rem;
     text-align: center;
     margin-bottom:  5vh;
+    border: none;
 }
 
 .Class_Player_Name_Buttons{
@@ -300,9 +267,6 @@ footer{
     margin-top: 1rem;
 }
 
-#ID_Start_Button:hover{
-    cursor: pointer;
-}
 
 
 /* CSS for the toggling in the Settings Menu*/
@@ -660,6 +624,136 @@ footer{
         transform: rotate(0deg); 
     }
 }
+
+
+                                                                                                                                                                                                                                                                               /*
+================================================================================================================================================================================================================================================================================
+                                 
+                                                        Game End Screen        
+
+===============================================================================================================================================================================================================================================================================*/
+
+/* Container for Fireworks-Canvas*/
+.Class_Game_End_Div{
+    position: absolute;
+    left: 0;
+    top: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+/* Container for Game End Text, Buttons and Gameboard Animation */ 
+.Class_Game_End_Container{
+    z-index: 4;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    justify-content: center;
+    text-align: center;
+    animation: End_Animation 4s ease-in ;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+}
+@keyframes End_Animation {
+    from{
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
+/* Move Gameboard to the right at the End of the Game Animation */
+.Class_Gameboard_End{
+    position: absolute;
+    animation: Gameboard_End_Animation 4s ease-in ;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    z-index: 4;
+}
+
+@keyframes Gameboard_End_Animation {
+    from{
+        top: 0;
+    }
+    to {
+        bottom: 0;
+        min-height:35%;
+        min-width: 50vh;
+    }
+}
+
+.Class_Top_End{
+    background-color: var(--main-white);
+    opacity: .7;
+}
+
+
+/* Class for the Text & Buttons */
+.Class_Game_End{
+
+}
+#ID_End_H1{
+    min-width: 100%;
+    margin-top: 5%;
+}
+#ID_End_Text{
+    min-width: 100%;
+}
+#ID_End_Button_Div{
+    min-width: 100%;
+    margin-bottom: 30vh;
+    justify-content: center;
+    align-content: center;   
+}
+
+#ID_NewGame_Button{
+    cursor: pointer;
+    min-width: 12.5vw;
+    min-height: 7.5vh;
+    border-radius: 10rem;
+    margin-block: 1rem;
+    margin-right: 1rem;          
+}
+#ID_Back_Button{
+    cursor: pointer;
+    min-width: 12.5vw;
+    min-height: 7.5vh;
+    border-radius: 10rem;
+    margin-block: 1rem;
+    margin-left: 1rem;
+}
+
+
+/* Win Marks */
+#ID_Win_Div_One{
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 5rem;
+    min-height: 3rem;
+    justify-content: left;
+    align-content: flex-start;
+    text-align: center;
+}
+
+#ID_Win_Div_Two{
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 5rem;
+    min-height: 3rem;
+    justify-content: right;
+    align-content: flex-end;
+    text-align: center;
+}
+
+
+       
                                                                                                                                                                                                                                                                               /*
 ================================================================================================================================================================================================================================================================================
                                  
@@ -762,6 +856,56 @@ footer{
         min-width: 30%;
         margin-bottom: 2%;
     }
+
+            /* Gaḿe End Screen Mobile*/
+/* Move Gameboard at the End of the Game Animation */
+.Class_Gameboard_End{
+    position: absolute;
+    animation: Gameboard_End_Animation 4s ease-in ;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    z-index: 4;
+}
+
+@keyframes Gameboard_End_Animation {
+    from{
+        bottom: 0;
+    }
+    to {
+        bottom: 0;
+        min-height:30%;
+        min-width: 40vh;   
+    }
+}
+
+/* Win Marks */
+#ID_Win_Div_One{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    min-width: 3rem;
+    min-height: 2rem;
+    display: flex;
+    align-items: flex-end;
+}
+
+#ID_Win_Div_Two{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    min-width: 3rem;
+    min-height: 2rem;
+    display: flex;
+    align-items: flex-end;
+}
+
+
+
+
+
+
+
+
 
 }
                                                                                                                                                                                                                                                                               /*
